# Onsharp

./: .gitignore  .gitmodules  LICENSE  README.md  UPDATER.txt
.github/: FUNDING.yml
.github/workflows/: publish.yml
api/: api.sln  api.sln.DotSettings
api/Onsharp/: ColorUtils.cs  EntryPoint.cs  IEntryPoint.cs  IServer.cs  Onsharp.csproj  Server.cs
api/Onsharp/Commands/: Command.cs  CommandFailure.cs  CommandInfo.cs  CommandManager.cs  ConsoleCommand.cs  Describe.cs  Usage.cs
api/Onsharp/Converters/: BasicConverter.cs  EnumConverter.cs  PlayerConverter.cs
api/Onsharp/Dimension/: Vector.cs
api/Onsharp/Entities/: Door.cs  Entity.cs  EntityPool.cs  LifelessEntity.cs  NPC.cs  Object.cs  Pickup.cs  Player.cs  Text3D.cs  Vehicle.cs
api/Onsharp/Enums/: Animation.cs  AttachType.cs  DamageType.cs  EnumHelper.cs  HitType.cs  MoveMode.cs  PlayerState.cs  VehicleModel.cs  Weapon.cs  WeaponStat.cs
api/Onsharp/Events/: EventType.cs  RemoteEvent.cs  ServerEvent.cs
api/Onsharp/Exceptions/: PluginException.cs  PluginNeededAsDependencyException.cs
api/Onsharp/IO/: Config.cs  DataStorage.cs  FileSystemUtils.cs  IDataStorage.cs  ILogger.cs  Json.cs  Logger.cs
api/Onsharp/Interop/: LuaExport.cs  LuaPackage.cs  LuaTable.cs
api/Onsharp/Metrics/: IMetrics.cs  MetricsClient.cs
api/Onsharp/Modules/: I18n.cs  LazyMover.cs
api/Onsharp/Native/: AttachmentInfo.cs  Bridge.cs  ConsoleManager.cs  Converter.cs  IRuntime.cs  NativeValue.cs  NetworkStats.cs  (+4 more)
api/TestPlugin/: MyConfig.cs  MyPlayer.cs  MyPlayerFactory.cs  PluginMain.cs  TestPlugin.csproj
docs/: index.rst
runtime/: CMakeLists.txt  library.h
runtime-cef/: compile.bat  package.bat  runtime.html
runtime-cef/src/: Program.cs  WasmRuntime.cs
runtime/src/: CMakeLists.txt  NetBridge.hpp  Plugin.cpp  Plugin.hpp  PluginInterface.cpp
(+39 files in other folders)
